WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275624
[WebGPU] Metal compiler error message can expose privacy sensitive information
https://bugs.webkit.org/show_bug.cgi?id=275624
Summary
[WebGPU] Metal compiler error message can expose privacy sensitive information
Mike Wyrzykowski
Reported
2024-06-18 11:04:47 PDT
[WebGPU] Metal compiler error message can expose privacy sensitive information
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-06-18 11:05:00 PDT
radar://130065215
Mike Wyrzykowski
Comment 2
2024-06-18 11:28:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29942
EWS
Comment 3
2024-06-20 09:05:55 PDT
Committed
280202@main
(95f95344fbdd): <
https://commits.webkit.org/280202@main
> Reviewed commits have been landed. Closing PR #29942 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug