[WebGPU] Metal compiler error message can expose privacy sensitive information https://bugs.webkit.org/show_bug.cgi?id=275624 <radar://130065215>

Reviewed by Dan Glastonbury.

Metal compilation error message was leaking privacy sensitive information.

* LayoutTests/TestExpectations:
Skip for debug as we print privacy sensitive information in debug.

* LayoutTests/fast/webgpu/regression/repro_275624-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_275624.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::ShaderModule::createLibrary):

Canonical link: https://commits.webkit.org/280202@main